<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePercent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDpEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_end="120dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDpTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="100dp"
        android:orientation="horizontal" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelinePercent"
        app:layout_constraintEnd_toEndOf="@id/guidelinePercent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineDpTop"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineDpTop"
        app:layout_constraintEnd_toEndOf="@id/guidelinePercent"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/guideline_25percent" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineDpEnd"
        app:layout_constraintEnd_toEndOf="@id/guidelineDpEnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineDpTop"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineDpTop"
        app:layout_constraintStart_toStartOf="@id/guidelineDpEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/guideline_120dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineDpTop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineDpTop"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guidelineDpTop"
        app:layout_constraintStart_toStartOf="@id/guidelinePercent"
        app:layout_constraintEnd_toEndOf="@id/guidelineDpEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/guideline_100dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="end"
        app:barrierMargin="24dp"
        app:constraint_referenced_ids="itemName1, itemName2, itemName3, itemName4" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/guidelineDpTop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/itemName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/itemValue1"
        app:layout_constraintBottom_toBottomOf="@id/itemValue1"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/item_name_1" />

    <TextView
        android:id="@+id/itemValue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guidelineDpTop"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/item_value_1" />

    <TextView
        android:id="@+id/itemName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/itemValue2"
        app:layout_constraintBottom_toBottomOf="@id/itemValue2"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/item_name_2" />

    <TextView
        android:id="@+id/itemValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/itemValue1"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/item_value_2" />

    <TextView
        android:id="@+id/itemName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/itemValue3"
        app:layout_constraintBottom_toBottomOf="@id/itemValue3"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/item_name_3" />

    <TextView
        android:id="@+id/itemValue3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/itemValue2"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/item_value_3" />

    <TextView
        android:id="@+id/itemName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/itemValue4"
        app:layout_constraintBottom_toBottomOf="@id/itemValue4"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/item_name_4" />

    <TextView
        android:id="@+id/itemValue4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/itemValue3"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/item_value_4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/textBarrier"
        app:layout_constraintBottom_toBottomOf="@id/textBarrier"
        app:layout_constraintEnd_toEndOf="@id/barrier"
        android:src="@drawable/arrow_right" />

    <View
        android:layout_width="20dp"
        android:layout_height="4dp"
        app:layout_constraintTop_toTopOf="@id/textBarrier"
        app:layout_constraintBottom_toBottomOf="@id/textBarrier"
        app:layout_constraintEnd_toEndOf="@id/barrier"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/textBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/itemValue4"
        app:layout_constraintEnd_toEndOf="@id/barrier"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:text="@string/barrier_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
